--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
@@ -34,6 +34,14 @@
                         </div>
                     </mat-cell>
                 </ng-container>
+                <ng-container matColumnDef="processCharge">
+                    <mat-header-cell *matHeaderCellDef>Processing Charges</mat-header-cell>
+                    <mat-cell *matCellDef="let item" class="d-block">
+                        <div class="currency">
+                            {{item?.scrapQuickPay?.depositAmount ? (item?.scrapQuickPay?.depositAmount | indianCurrencyFormat) : '-'}}
+                        </div>
+                    </mat-cell>
+                </ng-container>
                 <ng-container matColumnDef="appraisalApproval">
                     <mat-header-cell *matHeaderCellDef>Appraiser Approval</mat-header-cell>
                     <mat-cell *matCellDef="let item">
