--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -552,6 +552,7 @@ mat-header-row {
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-option {
 	line-height: 0;
 	min-width: 0;
+	background: #f2f3f7;
 }
 
 // status text
