--- a/gold-admin-frontend/src/app/views/pages/admin/customer-management/customer-details/customer-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/customer-management/customer-details/customer-details.component.html
@@ -147,7 +147,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="text-primary font-weight-500 kt-pointer kt-margin-b-10" (click)="viewLoan(loan.id)"
+                        <div class="text-primary font-weight-500 kt-pointer kt-margin-b-10" (click)="viewLoan(loan.id,loan.masterLoanId)"
                         *ngxPermissionsOnly="['loanDetailsView']">View  Details</div>
                     </div>
                 </div>
