un secured changes

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/un-secured-scheme/un-secured-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/un-secured-scheme/un-secured-scheme.component.html
@@ -9,7 +9,7 @@
                         <label class="mandatory"> Select Unsecured Scheme</label>
                     </div>
                     <div class="col-6">
-                        <select class="form-control" formControlName="unsecuredSchemeName" 
+                        <select class="form-control" formControlName="unsecuredSchemeName"  (change)="unsecuredSchemeChange()"
                             [class.isError]="controls.unsecuredSchemeName.touched && controls.unsecuredSchemeName.invalid">
                             <option selected disabled value="">Select Status</option>
                             <option *ngFor="let scheme of unsecuredSchemes" [value]="scheme.id">
