--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
@@ -105,8 +105,7 @@
                                 <div class="kt-pointer">
                                     <button (click)="editScrap(item)"
                                         [ngClass]="{'cursor-not-allowed':!permission.loanDisbursement}"
-                                        class="green-button">Disburse
-                                        Amount</button>
+                                        class="green-button">Disburse Amount</button>
                                 </div>
                             </div>
                             <div *ngIf="item?.scrapStage?.id == 5">
