bm::permissions part release

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/view-packet-log/view-packet-log.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/view-packet-log/view-packet-log.component.html
@@ -1,5 +1,5 @@
 <kt-portlet>
-    <kt-modal-header [title]='"View Logs"'></kt-modal-header>
+    <kt-modal-header [title]='"View Logs"' (action)="action($event)"></kt-modal-header>
 
     <kt-portlet-body>
         <label for="">Customer ID: CUSTO7894 &nbsp;Loan ID: LOAN7894</label>
