--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.html
@@ -105,16 +105,20 @@
                 <ng-container matColumnDef="updateStatus">
                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                     <mat-cell *matCellDef="let item">
-                        <button style="width: 120px;" *ngIf="item.amountStatus != 'completed'" class="apply-kyc"
-                            (click)="updateStatus(item)">Update
-                        </button>
+                        <ng-container *ngIf="item.amountStatus != 'completed'">
+                            <button *ngxPermissionsOnly="['partReleaseEdit']" style="width: 120px;" class="apply-kyc"
+                                (click)="updateStatus(item)">Update
+                            </button>
+                        </ng-container>
                         <ng-container *ngIf="item.amountStatus == 'completed'">
                             <div *ngIf="!item.isAppraiserAssigned" [ngStyle]="{'display': 'inherit'}">
-                                <button style="width: 120px;" class="apply-kyc" (click)="assign(item)">Assign
+                                <button *ngxPermissionsOnly="['partReleaseAssignAppraiser']" style="width: 120px;"
+                                    class="apply-kyc" (click)="assign(item)">Assign
                                     Appraiser</button>
                             </div>
                             <div *ngIf="item.isAppraiserAssigned" [ngStyle]="{'display': 'inherit'}">
-                                <button style="width: 120px;" class="apply-kyc" (click)="updateAppraiser(item)">Update
+                                <button *ngxPermissionsOnly="['partReleaseAssignAppraiser']" style="width: 120px;"
+                                    class="apply-kyc" (click)="updateAppraiser(item)">Update
                                     Appraiser
                                 </button>
                             </div>
