--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
@@ -117,18 +117,21 @@
                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                     <mat-cell *matCellDef="let item">
                         <ng-container *ngIf="item.partReleaseStatus != 'released'">
-                            <button style="width: 130px;" class="apply-kyc" (click)="updateStatus(item)">Update
+                            <button *ngxPermissionsOnly="['partReleaseStatus']" style="width: 130px;" class="apply-kyc"
+                                (click)="updateStatus(item)">Update
                             </button>
                         </ng-container>
 
-                        <ng-container *ngIf="item.partReleaseStatus == 'released'">
-                            <button *ngIf="!item.documents" style="width: 130px;" class="apply-kyc"
-                                (click)="updateDocument(item)">Upload
-                                Documents
-                            </button>
-                            <button *ngIf="item.documents && !(item.newLoan && item.newLoan.loanStatusForAppraiser)"
-                                style="width: 130px;" class="apply-kyc" (click)="newLoan(item)">New Loan
-                            </button>
+                        <ng-container *ngxPermissionsOnly="['partReleaseStatus']">
+                            <ng-container *ngIf="item.partReleaseStatus == 'released'">
+                                <button *ngIf="!item.documents" style="width: 130px;" class="apply-kyc"
+                                    (click)="updateDocument(item)">Upload
+                                    Documents
+                                </button>
+                                <button *ngIf="item.documents && !(item.newLoan && item.newLoan.loanStatusForAppraiser)"
+                                    style="width: 130px;" class="apply-kyc" (click)="newLoan(item)">New Loan
+                                </button>
+                            </ng-container>
                         </ng-container>
 
                         <!-- <button style="width: 130px;" class="apply-kyc" (click)="updateStatus(item)">Update
