--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
@@ -110,7 +110,8 @@
                             <ng-container *ngIf="!loan.partRelease">
                                 <button mat-menu-item (click)="interestEmi(loan)">Quick Pay</button>
                                 <button mat-menu-item (click)="topUp(loan)">Top Up</button>
-                                <button mat-menu-item (click)="jewelleryRelease(loan)">Jewellery
+                                <button *ngxPermissionsOnly="['partReleaseAdd']" mat-menu-item
+                                    (click)="jewelleryRelease(loan)">Jewellery
                                     Release</button>
                             </ng-container>
                             <button *ngxPermissionsOnly="['loanDetailsAdd']" mat-menu-item (click)="newLoan(loan)">Add
