Changes in scrap details

--- a/gold-admin-frontend/src/app/views/partials/components/customer-details/customer-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/customer-details/customer-details.component.html
@@ -174,7 +174,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="text-primary font-weight-500 kt-pointer kt-margin-b-10" (click)="viewScrap(scrap?.id)">View
+                <div class="text-primary font-weight-500 kt-pointer kt-margin-b-10" (click)="viewScrap(scrap)">View
                     Details</div>
             </div>
         </div>
