--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
@@ -104,7 +104,7 @@
                             <div *ngIf="item?.scrapStage?.id == 4">
                                 <div class="kt-pointer">
                                     <button (click)="editScrap(item)"
-                                        [ngClass]="{'cursor-not-allowed':!permission.loanDisbursement}"
+                                        [ngClass]="{'cursor-not-allowed':!permission.scrapDisbursement}"
                                         class="green-button">Disburse Amount</button>
                                 </div>
                             </div>
