--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/packets/packets-list/packets-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/packets/packets-list/packets-list.component.html
@@ -50,10 +50,10 @@
                     <mat-cell *matCellDef="let role">
                         <div [ngStyle]="{'display': 'inherit'}" *ngIf="!role.packetAssigned">
                             <span class="kt-pointer" (click)="editPacket(role)"
-                                *ngxPermissionsOnly="['packetEdit']">Edit</span>
-                            <div class="px-2" *ngxPermissionsOnly="['packetDelete'] || ['packetEdit']">|</div>
+                                *ngxPermissionsOnly="['scrapPacketEdit']">Edit</span>
+                            <div class="px-2" *ngxPermissionsOnly="['scrapPacketDelete'] || ['scrapPacketEdit']">|</div>
                             <span class="kt-pointer text-danger" (click)="deletePacket(role)"
-                                *ngxPermissionsOnly="['packetDelete']">Delete</span>
+                                *ngxPermissionsOnly="['scrapPacketDelete']">Delete</span>
                         </div>
                     </mat-cell>
                 </ng-container>
