--- a/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
@@ -193,11 +193,9 @@
                                 <div class="row kt-margin-t-15">
                                     <div class="col-4 form-label">
                                         <label class="my-auto mandatory text-color" *ngIf="meltingOrnament">Ornament
-                                            Image(with XRF
-                                            machine purity reading))</label>
+                                            Image(with XRF machine purity reading)</label>
                                         <label class="my-auto mandatory text-color" *ngIf="!meltingOrnament">Ornament
-                                            Image(with XRF machine
-                                            reading)</label>
+                                            Image(with XRF machine reading)</label>
                                     </div>
                                     <div class="col-4 form-label">
                                         <label *ngIf="ornament.controls.ornamentImageWithXrfMachineReading.value"
