--- a/gold-admin-frontend/src/app/views/partials/components/approval/approval.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/approval/approval.component.html
@@ -18,7 +18,7 @@
                     <tbody>
                         <tr>
                             <td scope="row" class="rating-title">
-                                {{scrapIds ? 'Scrap Buying Application Form' : 'Loan Application Form'}}</td>
+                                {{scrapIds ? 'Scrap Buying Application' : 'Loan Application Form'}}</td>
                             <td class="rating-cce text-center">
                                 <img src="../../../../../../../assets/media/icons/correct.svg"
                                     [ngClass]="{'cursor-not-allowed':((stage !=1 && stage !=6) || this.disable )}"
