--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/scrap-application-form/scrap-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/scrap-application-form/scrap-application-form.component.html
@@ -27,7 +27,8 @@
                             (processingChrgs)="processingChrgs($event)">
                         </kt-upload-documents>
                     </mat-tab>
-                    <mat-tab label="Melting Ornaments" [disabled]="disabled[3]">
+                    <mat-tab label="Melting Ornaments" [disabled]="disabled[3]"
+                        *ngIf="!(url == 'view-scrap' && scrapStage?.id == 10)">
                         <div class="mat-tab-body-content ng-trigger ng-trigger-translateTab p-0"
                             style="padding:0px !important">
                             <kt-ornaments [action]="action" (next)="next($event)" [disable]="disabledForm"
@@ -39,21 +40,23 @@
                             </kt-ornaments>
                         </div>
                     </mat-tab>
-                    <mat-tab label="Bank Details" [disabled]="disabled[4]">
+                    <mat-tab label="Bank Details" [disabled]="disabled[4]"
+                        *ngIf="!((url == 'view-scrap' && scrapStage?.id == 9) || (url == 'view-scrap' && scrapStage?.id == 10))">
                         <kt-bank-details [action]="action" [scrapIds]="scrapIds" [details]="customerDetail"
                             [disable]="disabledForm" [finalScrapAmt]="finalScrapAmt" (next)="next($event)"
                             [showButton]="showButton" [accountHolderName]="accountHolderName">
                         </kt-bank-details>
                     </mat-tab>
-                    <mat-tab label="Scrap Status Approval" [disabled]="disabled[5]" *ngIf="scrapStage?.id == 6 || scrapStage?.id == 8 || scrapStage?.id == 1 || scrapStage?.id == 3 || 
-                        (url == 'view-scrap' && scrapStage?.id == 6) || (url == 'view-scrap' && scrapStage?.id == 8) || 
-                        (url == 'view-scrap' && scrapStage?.id == 1) || (url == 'view-scrap' && scrapStage?.id == 3)">
+                    <mat-tab label="Scrap Status Approval" [disabled]="disabled[5]"
+                        *ngIf="scrapStage?.id == 6 || scrapStage?.id == 8 || scrapStage?.id == 1 || scrapStage?.id == 3 || 
+                            (url == 'view-scrap' && scrapStage?.id == 6) || (url == 'view-scrap' && scrapStage?.id == 8) || 
+                            (url == 'view-scrap' && scrapStage?.id == 1) || (url == 'view-scrap' && scrapStage?.id == 3)">
                         <kt-approval [action]="action" [disable]="approvalFrom" [scrapDetails]="customerDetail"
                             [scrapIds]="scrapIds" [scrapStage]="scrapStage" (ornamentType)="ornaments($event)">
                         </kt-approval>
                     </mat-tab>
                     <mat-tab label="Packets" [disabled]="disabled[5]"
-                        *ngIf="scrapStage?.id != 6 && scrapStage?.id != 1 && scrapStage?.id && scrapStage?.id != 9">
+                        *ngIf="scrapStage?.id && scrapStage?.id != 1 && scrapStage?.id != 6 && scrapStage?.id != 9 && scrapStage?.id != 10">
                         <div class="mat-tab-body-content ng-trigger ng-trigger-translateTab"
                             style="padding:0px !important">
                             <kt-upload-packets [viewScrapPacketsDetails]="customerDetail" [scrapIds]="scrapIds"
@@ -62,14 +65,13 @@
                         </div>
                     </mat-tab>
                     <mat-tab label="Scrap Status Approval"
-                        *ngIf="scrapStage?.id == 2 || (url == 'view-scrap' && scrapStage?.id == 2)"
-                        [disabled]="false">
+                        *ngIf="scrapStage?.id == 2 || (url == 'view-scrap' && scrapStage?.id == 2)" [disabled]="false">
                         <kt-approval [action]="action" [disable]="approvalFrom" [scrapDetails]="customerDetail"
                             [scrapIds]="scrapIds" [scrapStage]="scrapStage">
                         </kt-approval>
                     </mat-tab>
                     <mat-tab label="Upload Documents" [disabled]="disabled[6]"
-                        *ngIf="scrapStage?.id == 8 || scrapStage?.id == 7 || scrapStage?.id == 4 || (scrapStage?.id == 8 || url =='view-scrap') || (scrapStage?.id == 7 || url =='view-scrap') || (scrapStage?.id == 4 || url =='view-scrap')">
+                        *ngIf="scrapStage?.id == 8 || scrapStage?.id == 7 || scrapStage?.id == 5 || scrapStage?.id == 4 || (scrapStage?.id == 8 && url =='view-scrap') || (scrapStage?.id == 7 && url =='view-scrap') || (scrapStage?.id == 5 && url =='view-scrap')|| (scrapStage?.id == 4 && url =='view-scrap')">
                         <kt-upload-documents [scrapIds]="scrapIds" (next)="next($event)"
                             [scrapDocuments]="customerDetail" [showButton]="showButton" [showScrapFlag]="true"
                             [scrapStage]="scrapStage">
@@ -81,7 +83,7 @@
                             [scrapIds]="scrapIds" [scrapStage]="scrapStage" (disbursal)="disbursal($event)">
                         </kt-approval>
                     </mat-tab>
-                    <mat-tab label="Disbursement" *ngIf="scrapStage?.id == 4 ">
+                    <mat-tab label="Disbursement" *ngIf="url != 'view-scrap' && scrapStage?.id == 4">
                         <kt-disburse [scrapIds]="scrapIds"></kt-disburse>
                     </mat-tab>
                 </mat-tab-group>
