--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-tracking/packet-tracking.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-tracking/packet-tracking.component.html
@@ -6,14 +6,16 @@
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
                 <ng-container matColumnDef="userName">
                     <mat-header-cell *matHeaderCellDef>User Name</mat-header-cell>
-                    <mat-cell *matCellDef="let packet">{{packet.userName | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let packet">
+                        {{packet.loanPacketDetails[0].packets[0].appraiser.firstName + " " + 
+                        packet.loanPacketDetails[0].packets[0].appraiser.lastName | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="internalBranch">
                     <mat-header-cell *matHeaderCellDef>Branch</mat-header-cell>
                     <mat-cell *matCellDef="let packet">
                         <span *ngIf="packet.customer">
-                            <!-- {{packet.customer.customerUniqueId}} -->
+                            {{packet.loanPacketDetails[0].packets[0].internalBranch.name | titlecase}}
                         </span>
                     </mat-cell>
                 </ng-container>
@@ -29,25 +31,29 @@
                 <ng-container matColumnDef="loanId">
                     <mat-header-cell *matHeaderCellDef>Loan ID</mat-header-cell>
                     <mat-cell *matCellDef="let packet">
-                        <span *ngIf="packet.customerLoan">
-                            {{packet.customerLoan.loanUniqueId}}
-                        </span>
+                        <div *ngFor="let item of packet.customerLoan">
+                            <span *ngIf="item.loanType === 'secured'">
+                                {{ item.loanUniqueId | uppercase }}
+                            </span>
+                        </div>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="customerName">
                     <mat-header-cell *matHeaderCellDef>Customer Name</mat-header-cell>
                     <mat-cell *matCellDef="let packet">
                         <span *ngIf="packet.customerLoan">
-                            {{packet.customerLoan.loanUniqueId}}
+                            {{packet.customer.firstName + " " + packet.customer.lastName |titlecase}}
                         </span>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="loanAmount">
                     <mat-header-cell *matHeaderCellDef>Loan Amount</mat-header-cell>
                     <mat-cell *matCellDef="let packet">
-                        <span *ngIf="packet.customerLoan">
-                            {{packet.customerLoan.loanUniqueId}}
-                        </span>
+                        <div *ngFor="let item of packet.customerLoan">
+                            <span *ngIf="item.loanType === 'secured'">
+                                {{ item.loanAmount | uppercase }}
+                            </span>
+                        </div>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="currentLocation">
