--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/update-location/update-location.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/update-location/update-location.component.html
@@ -31,10 +31,11 @@
                                     <div class="col-8">
                                         <div class="row">
                                             <div class="col-7 d-flex align-items-center">
-                                                Packet ID
+                                                {{ item.get('packetId').value | uppercase }}
                                             </div>
                                             <div class="col text-right">
-                                                <kt-button [type]="'button'" [value]="'Scan'"></kt-button>
+                                                <kt-button [type]="'button'" (click)="scanBarcode(idx)"
+                                                    [value]="'Scan'"></kt-button>
                                             </div>
                                         </div>
                                     </div>
@@ -42,8 +43,8 @@
                                 <div class="row justify-content-center kt-margin-t-15">
                                     <div class="col-8 offset-4">
                                         <input type="text" class="form-control" placeholder="Enter Barcode No."
-                                            formControlName="barcode"
-                                            [class.isError]="item.get('barcode').invalid &&  item.get('barcode').touched">
+                                            formControlName="Barcode"
+                                            [class.isError]="item.get('Barcode').invalid &&  item.get('Barcode').touched">
                                     </div>
                                 </div>
                             </div>
@@ -54,11 +55,16 @@
                             <label class="kt-padding-l-10 mandatory">Mobile Number</label>
                         </div>
                         <div class="col-8">
-                            <input class="form-control" formControlName="mobileNumber"
-                                [class.isError]="locationForm.controls.mobileNumber.invalid &&  locationForm.controls.mobileNumber.touched" />
+                            <input class="form-control" formControlName="mobileNumber" (blur)="getDetailsByMobile()"
+                                [class.isError]="locationForm.controls.mobileNumber.invalid &&  locationForm.controls.mobileNumber.touched"
+                                maxlength="10" />
                             <mat-error
                                 *ngIf="locationForm.controls.mobileNumber.touched && locationForm.controls.mobileNumber.errors?.required">
                                 Required field
+                            </mat-error>
+                            <mat-error
+                                *ngIf="locationForm.controls.mobileNumber.touched && locationForm.controls.mobileNumber.errors?.pattern">
+                                Invalid Input
                             </mat-error>
                         </div>
                     </div>
@@ -67,7 +73,7 @@
                             <label class="kt-padding-l-10 mandatory">User</label>
                         </div>
                         <div class="col-8">
-                            <input class="form-control" formControlName="user"
+                            <input readonly class="form-control cursor-not-allowed" formControlName="user"
                                 [class.isError]="locationForm.controls.user.invalid &&  locationForm.controls.user.touched" />
                             <mat-error
                                 *ngIf="locationForm.controls.user.touched && locationForm.controls.user.errors?.required">
