--- a/gold-admin-frontend/src/app/views/partials/components/customer-details/customer-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/customer-details/customer-details.component.html
@@ -148,8 +148,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="text-primary font-weight-500 kt-pointer kt-margin-b-10" (click)="viewLoan(loan.id,loan.masterLoanId)"
-                            *ngxPermissionsOnly="['loanDetailsView']">View Details</div>
+                        <div class="text-primary font-weight-500 kt-pointer kt-margin-b-10"
+                            (click)="viewLoan(loan.id,loan.masterLoanId)" *ngxPermissionsOnly="['loanDetailsView']">View
+                            Details</div>
                     </div>
                 </div>
             </div>
@@ -174,8 +175,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="text-primary font-weight-500 kt-pointer kt-margin-b-10" (click)="viewScrap(scrap)">View
-                    Details</div>
+                <div class="text-primary font-weight-500 kt-pointer kt-margin-b-10" (click)="viewScrap(scrap)"
+                    *ngxPermissionsOnly="['scrapDetailsView']">View Details</div>
             </div>
         </div>
     </div>
