--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/buying-list/buying-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/buying-list/buying-list.component.html
@@ -27,9 +27,9 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let list">
                         <div [ngStyle]="{'display': 'inherit'}" *ngIf="!list.packetAssigned">
-                            <span class="kt-pointer" (click)="viewScrap(list)">View</span>
+                            <span class="kt-pointer" (click)="viewScrap(list)">View Scrap</span>
                             <div class="px-2">|</div>
-                            <span class="kt-pointer" (click)="newScrap(list)">Add</span>
+                            <span class="kt-pointer" (click)="newScrap(list)">Add New Scrap</span>
                         </div>
                     </mat-cell>
                 </ng-container>
