--- a/gold-admin-frontend/src/app/views/partials/components/upload-packets/upload-packets.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/upload-packets/upload-packets.component.html
@@ -22,7 +22,8 @@
                 </div>
                 <div class="col-7">
                     <kt-multi-select-search formControlName="ornamentType" [items]="ornamentTypeData" [multiple]="true"
-                        [bindLabel]="'name'" [isClear]="clearData" [placeholder]="'Ornament Type'" [selectAll]="true">
+                        [bindLabel]="'ornamentType'" [isClear]="clearData" [placeholder]="'Ornament Type'"
+                        [selectAll]="true">
                     </kt-multi-select-search>
                     <mat-error
                         *ngIf="packetInfo.controls.ornamentType.touched && packetInfo.controls.ornamentType.invalid">
