packet, upload documents bug fixes

--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/packets/assign-appraiser-packets/assign-appraiser-packets.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/packets/assign-appraiser-packets/assign-appraiser-packets.component.html
@@ -49,7 +49,7 @@
     </kt-portlet-body>
     <kt-portlet-footer>
         <div class="p-3">
-            <kt-modal-footer *ngIf="data.action == 'add'" (action)="action($event)" [value]="'Add'"></kt-modal-footer>
+            <kt-modal-footer *ngIf="data.action == 'add'" (action)="action($event)" [value]="'Assign'"></kt-modal-footer>
             <kt-modal-footer *ngIf="data.action == 'edit'" (action)="action($event)" [value]="'Update'">
             </kt-modal-footer>
         </div>
